--- a/week03/PTanofsky_Assignment3.rmd
+++ b/week03/PTanofsky_Assignment3.rmd
@@ -1,6 +1,6 @@
 ---
 title: "DATA 605: Assignment 03"
-subtitle: "Semester: Spring 2021; Professor Doc Larry"
+subtitle: "CUNY: Spring 2021; Professor Doc Larry"
 author: "Philip Tanofsky"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output: pdf_document
